components/create-business-form/create-business-form.module.css
.flex-container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 75px;
  max-width: 375px;
}

.btn {
  background: green;
  color: white;
  border: none;
  border-radius: 5px;
  padding: 0.33rem;
  font-weight: bold;
  font-size: 20px;
  cursor: pointer;
}

.btn:hover {
  background: seagreen;
}

.text-input {
  margin-bottom: 0.5rem;
  font-family: Arial, Helvetica, sans-serif;
  padding: 0.25rem;
  font-size: 20px;
}

.asterisk {
  color: #888;
  font-weight: bold;
  font-style: oblique;
}

